# boostkit-bigdata

./: .gitignore  README.md  pom.xml
hbase-tries-index/: README.md
hbase-tries-index/fake-tries-index-pack/: pom.xml
hbase-tries-index/patch/: HBase-Louds-Tries-Index.patch
omnicache/omnicache-spark-extension/: README.md  build.sh  pom.xml  scalastyle-config.xml
omnicache/omnicache-spark-extension/dev/: checkstyle.xml
omnicache/omnicache-spark-extension/log-parser/: pom.xml
omnicache/omnicache-spark-extension/plugin/: pom.xml
omnidata/: README.md
omnidata/omnidata-hive-connector/: .gitignore  README.md  build.sh  hive_build.sh  pom.xml
omnidata/omnidata-hive-connector/connector/: pom.xml
omnidata/omnidata-hive-connector/stub/: pom.xml
omnidata/omnidata-hive-connector/stub/client/: pom.xml
omnidata/omnidata-hive-connector/stub/server/: pom.xml
omnidata/omnidata-hiveudf-loader/: README.md  pom.xml
omnidata/omnidata-hiveudf-loader/etc/function-namespace/: hive.properties
omnidata/omnidata-openlookeng-connector/: README.md  build.sh  pom.xml
omnidata/omnidata-openlookeng-connector/connector/: pom.xml
omnidata/omnidata-openlookeng-connector/stub/: pom.xml
omnidata/omnidata-openlookeng-connector/stub/client/: pom.xml
omnidata/omnidata-openlookeng-connector/stub/common/: pom.xml
omnidata/omnidata-openlookeng-connector/stub/core/: pom.xml
omnidata/omnidata-openlookeng-connector/stub/server/: pom.xml
omnidata/omnidata-server-lib/: README.md  pom.xml
omnidata/omnidata-spark-connector/: .gitignore  README.md  build.sh  pom.xml  spark_build.sh
omnidata/omnidata-spark-connector/connector/: pom.xml
omnidata/omnidata-spark-connector/stub/: pom.xml
omnimv/omnimv-spark-extension/: README.md  pom.xml
omnimv/omnimv-spark-extension/log-parser/: pom.xml
omnimv/omnimv-spark-extension/plugin/: pom.xml
omnioperator/omniop-openlookeng-extension/: README.md  pom.xml
omnioperator/omniop-spark-extension/: README.md  pom.xml  scalastyle-config.xml  test.txt
omnioperator/omniop-spark-extension-ock/: pom.xml
omnioperator/omniop-spark-extension-ock/cpp/: CMakeLists.txt
omnioperator/omniop-spark-extension-ock/cpp/src/: CMakeLists.txt  build.sh
omnioperator/omniop-spark-extension-ock/cpp/src/jni/: OckShuffleJniReader.cpp  OckShuffleJniReader.h  OckShuffleJniWriter.cpp  OckShuffleJniWriter.h  jni_common.h
omnioperator/omniop-spark-extension-ock/cpp/src/proto/: vec_data.proto
omnioperator/omniop-spark-extension-ock/cpp/src/shuffle/: ock_hash_write_buffer.cpp  ock_hash_write_buffer.h  ock_merge_reader.cpp  ock_merge_reader.h  ock_splitter.cpp  ock_splitter.h  ock_type.h  ock_vector.h
omnioperator/omniop-spark-extension-ock/cpp/test/: CMakeLists.txt
omnioperator/omniop-spark-extension-ock/cpp/test/shuffle/: ock_shuffle_test.cpp
omnioperator/omniop-spark-extension-ock/cpp/test/utils/: iock_test_utils.cpp  ock_test_utils.cpp  ock_test_utils.h
omnioperator/omniop-spark-extension-ock/ock-omniop-shuffle/: pom.xml
omnioperator/omniop-spark-extension-ock/ock-omniop-shuffle/cpp/src/: CMakeLists.txt
omnioperator/omniop-spark-extension-ock/ock-omniop-shuffle/cpp/src/common/: common.h  debug.h
omnioperator/omniop-spark-extension-ock/ock-omniop-shuffle/cpp/src/jni/: OckShuffleJniReader.cpp  OckShuffleJniWriter.cpp  concurrent_map.h
omnioperator/omniop-spark-extension-ock/ock-omniop-shuffle/cpp/src/sdk/: ock_shuffle_sdk.h
omnioperator/omniop-spark-extension-ock/ock-omniop-shuffle/cpp/src/shuffle/: ock_hash_write_buffer.cpp  ock_merge_reader.cpp  ock_merge_reader.h  ock_splitter.cpp  ock_splitter.h  ock_type.h  ock_vector.h
omnioperator/omniop-spark-extension-ock/ock-omniop-shuffle/cpp/test/shuffle/: CMakeLists.txt  ock_shuffle_test.cpp
omnioperator/omniop-spark-extension-ock/ock-omniop-shuffle/cpp/test/utils/: CMakeLists.txt  ock_test_utils.cpp  ock_test_utils.h
omnioperator/omniop-spark-extension-ock/ock-omniop-tuning/: pom.xml
omnioperator/omniop-spark-extension/cpp/: CMakeLists.txt  build.sh  config.h  config.h.in
omnioperator/omniop-spark-extension/cpp/src/: CMakeLists.txt
omnioperator/omniop-spark-extension/cpp/src/common/: BinaryLocation.h  Buffer.cpp  Buffer.h  common.cpp  common.h  debug.h
omnioperator/omniop-spark-extension/cpp/src/io/: Adaptor.hh  ColumnWriter.cc  ColumnWriter.hh  Common.hh  Compression.cc  Compression.hh  MemoryPool.cc  MemoryPool.hh  OrcObsFile.cc  OrcObsFile.hh  OutputStream.cc  OutputStream.hh  SparkFile.cc  SparkFile.hh  WriterOptions.cc  WriterOptions.hh  compression.hh
omnioperator/omniop-spark-extension/cpp/src/io/orcfile/: OrcFileRewrite.cc  OrcFileRewrite.hh  OrcHdfsFileRewrite.cc
omnioperator/omniop-spark-extension/cpp/src/io/wrap/: coded_stream_wrapper.h  snappy_wrapper.h  zero_copy_stream_wrapper.h
omnioperator/omniop-spark-extension/cpp/src/jni/: OrcColumnarBatchJniReader.cpp  OrcColumnarBatchJniReader.h  ParquetColumnarBatchJniReader.cpp  ParquetColumnarBatchJniReader.h  SparkJniWrapper.cpp  SparkJniWrapper.h  SparkJniWrapper.hh  concurrent_map.h  jni_common.cpp  jni_common.h
omnioperator/omniop-spark-extension/cpp/src/proto/: vec_data.proto
omnioperator/omniop-spark-extension/cpp/src/shuffle/: splitter.cpp  splitter.h  type.h  utils.h
omnioperator/omniop-spark-extension/cpp/src/tablescan/: ParquetReader.cpp  ParquetReader.h
omnioperator/omniop-spark-extension/cpp/src/utils/: macros.h
omnioperator/omniop-spark-extension/cpp/test/: CMakeLists.txt  tptest.cpp
omnioperator/omniop-spark-extension/cpp/test/shuffle/: CMakeLists.txt  shuffle_test.cpp
omnioperator/omniop-spark-extension/cpp/test/tablescan/: CMakeLists.txt  parquet_scan_test.cpp  scan_test.cpp  scan_test.h.in
omnioperator/omniop-spark-extension/cpp/test/tablescan/resources/: orc_data_all_type  parquet_data_all_type
omnioperator/omniop-spark-extension/cpp/test/utils/: CMakeLists.txt  test_utils.cpp  test_utils.h
omnioperator/omniop-spark-extension/dev/: checkstyle-suppressions.xml  checkstyle.xml
omnioperator/omniop-spark-extension/java/: pom.xml
stub/client/: pom.xml
stub/core/: pom.xml
(+876 files in other folders)
