# used for test shuffle
file(GLOB OCK_SHUFFLE_TESTS_LIST  ock_shuffle_test.cpp)
set(OCK_SHUFFLE_TEST_TARGET ock_shuffle_test)
set(OCK_SHUFFLE_WORKSPACE ../../src/3rdparty)
add_library(${OCK_SHUFFLE_TEST_TARGET} ${OCK_SHUFFLE_TESTS_LIST})

# dependent libraries
target_link_libraries(${OCK_SHUFFLE_TEST_TARGET} ock_columnar_shuffle)
target_compile_options(${OCK_SHUFFLE_TEST_TARGET} PUBLIC)
target_include_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC ${OCK_SHUFFLE_WORKSPACE}/omni/include)
target_include_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC ${OCK_SHUFFLE_WORKSPACE}/json/include)
target_include_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC ${OCK_SHUFFLE_WORKSPACE}/datakit/include)
target_include_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC ${OCK_SHUFFLE_WORKSPACE}/)
target_include_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC ${CMAKE_BINARY_DIR}/src)
target_include_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC $ENV{JAVA_HOME}/include)
target_include_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC $ENV{JAVA_HOME}/include/linux)
target_link_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC ${OCK_SHUFFLE_WORKSPACE}/omni/lib)
target_link_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC ${OCK_SHUFFLE_WORKSPACE}/datakit/lib)
target_link_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC ${OCK_SHUFFLE_WORKSPACE}/common)
target_link_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC ${OCK_SHUFFLE_WORKSPACE}/common/ucx)
target_link_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC ${OCK_SHUFFLE_WORKSPACE}/common/ucx/ucx)
target_link_directories(${OCK_SHUFFLE_TEST_TARGET} PUBLIC ${OCK_SHUFFLE_WORKSPACE}/huawei_secure_c/lib)